crates/gfm-syntax/tests/snapshots/hard_line_breaks/example_658.snap
---
source: crates/gfm-syntax/tests/hard_line_breaks.rs
expression: output
---
Document [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
  Paragraph [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
    Inline [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
      Word: "foo" [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
      HardLineBreaks [ offsets: 3, position: ( line: 0, col: 3 ) ] ]
        WhiteSpace: "  " [ offsets: 3, position: ( line: 0, col: 3 ) ] ]
    LineEnding: "\n" [ offsets: 5, position: ( line: 0, col: 5 ) ] ]
    Inline [ offsets: 6, position: ( line: 1, col: 0 ) ] ]
      Word: "baz" [ offsets: 6, position: ( line: 1, col: 0 ) ] ]
  Eof: "\0" [ offsets: 9, position: ( line: 1, col: 3 ) ] ]
