crates/gfm-syntax/tests/snapshots/hard_line_breaks/example_665.snap
---
source: crates/gfm-syntax/tests/hard_line_breaks.rs
expression: output
---
Document [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
  Paragraph [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
    InlineCode [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
      Backtick: "`" [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
      Word: "code" [ offsets: 1, position: ( line: 0, col: 1 ) ] ]
      WhiteSpace: "  " [ offsets: 5, position: ( line: 0, col: 5 ) ] ]
      LineEnding: "\n" [ offsets: 7, position: ( line: 0, col: 7 ) ] ]
      Word: "span" [ offsets: 8, position: ( line: 0, col: 8 ) ] ]
      Backtick: "`" [ offsets: 12, position: ( line: 0, col: 12 ) ] ]
  Eof: "\0" [ offsets: 13, position: ( line: 0, col: 13 ) ] ]
