crates/gfm-syntax/tests/snapshots/hard_line_breaks/example_666.snap
---
source: crates/gfm-syntax/tests/hard_line_breaks.rs
expression: output
---
Document [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
  Paragraph [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
    InlineCode [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
      Backtick: "`" [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
      Word: "code" [ offsets: 1, position: ( line: 0, col: 1 ) ] ]
      ForwardSlash: "\\" [ offsets: 5, position: ( line: 0, col: 5 ) ] ]
      LineEnding: "\n" [ offsets: 6, position: ( line: 0, col: 6 ) ] ]
      Word: "span" [ offsets: 7, position: ( line: 0, col: 7 ) ] ]
      Backtick: "`" [ offsets: 11, position: ( line: 0, col: 11 ) ] ]
  Eof: "\0" [ offsets: 12, position: ( line: 0, col: 12 ) ] ]
